# manager-service-discovery

./: CLAUDE.md  Cargo.toml
manager-service-discovery/: Cargo.toml
manager-service-discovery-client/: Cargo.toml
manager-service-discovery-client/src/: lib.rs
manager-service-discovery-client/src/config/: mod.rs
manager-service-discovery-client/src/model/: mod.rs
manager-service-discovery-client/src/service/: mod.rs
manager-service-discovery/src/: main.rs
manager-service-discovery/src/config/: mod.rs
manager-service-discovery/src/service/: mod.rs
resources/: service_discoverability_put_request.json  test_put_request.sh
src/: lib.rs  main.rs
src/common/: config.rs  mod.rs  response.rs
src/config/: mod.rs
src/export/: helper.rs  mod.rs  request.rs  service_discovery_client.rs
src/model/: assignment.rs  body.rs  discoverability_request.rs  group.rs  instance_assignment.rs  instance_id.rs  mod.rs  request.rs
src/resource/: assignment_client.rs  mod.rs  service_discoverability_client.rs  service_discovery_client.rs
src/routes/: discoverability_routes.rs  discovery_routes.rs  mod.rs
src/service/: discoverability_service.rs  discovery_service.rs  mod.rs  service_discovery.rs
