[package]
name = "service-discoverability"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# AWS SDK
aws_lambda_events = "0"
lambda_runtime = "0"

cloud-util = {git = "https://github.com/ElBellaCiao/cloud-util.git", features = ["ec2"] }
